--- a/conservation.html
+++ b/conservation.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>动物保护与进化教育 - 恐狼教育</title>
+    <title>Animal Conservation & Evolution Education - Dire Wolf Education</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body class="bg-gray-100">
-    <!-- 导航栏 -->
+    <!-- Navigation Bar -->
     <nav class="bg-gray-900 text-white p-4">
         <div class="container mx-auto flex justify-between items-center">
             <div class="text-2xl font-bold">Dire Wolf Education</div>
@@ -62,45 +62,45 @@
         </div>
     </nav>
 
-    <!-- 页面标题 -->
+    <!-- Page Title -->
     <header class="bg-gray-800 text-white py-16">
         <div class="container mx-auto px-4">
-            <h1 class="text-4xl md:text-5xl font-bold mb-4">动物保护与进化教育</h1>
-            <p class="text-xl text-gray-300">从恐狼灭绝看现代动物保护</p>
+            <h1 class="text-4xl md:text-5xl font-bold mb-4">Animal Conservation & Evolution Education</h1>
+            <p class="text-xl text-gray-300">Modern Conservation Lessons from the Dire Wolf Extinction</p>
         </div>
     </header>
 
-    <!-- 主要内容 -->
+    <!-- Main Content -->
     <main class="container mx-auto px-4 py-12">
-        <!-- 进化与灭绝 -->
+        <!-- Evolution and Extinction -->
         <section class="mb-16">
-            <h2 class="text-3xl font-bold mb-8">进化与灭绝</h2>
+            <h2 class="text-3xl font-bold mb-8">Evolution and Extinction</h2>
             <div class="bg-white rounded-lg shadow-lg p-8">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div>
-                        <h3 class="text-xl font-bold mb-4">犬科动物进化树</h3>
+                        <h3 class="text-xl font-bold mb-4">Canid Evolutionary Tree</h3>
                         <div class="aspect-w-16 aspect-h-9 mb-4">
-                            <!-- 这里将放置进化树图表 -->
+                            <!-- Evolutionary tree chart will be placed here -->
                             <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
-                                <p class="text-gray-500">进化树图表加载中...</p>
+                                <p class="text-gray-500">Evolutionary tree chart loading...</p>
                             </div>
                         </div>
-                        <p class="text-gray-600">恐狼在犬科动物进化树上的位置，以及与其他犬科动物的关系。</p>
+                        <p class="text-gray-600">The Dire Wolf's position in the canid evolutionary tree and its relationship to other canid species.</p>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold mb-4">灭绝过程分析</h3>
+                        <h3 class="text-xl font-bold mb-4">Extinction Process Analysis</h3>
                         <div class="timeline">
                             <div class="timeline-item">
-                                <h4 class="font-bold mb-2">12.5万年前</h4>
-                                <p class="text-gray-600">恐狼开始出现在北美大陆</p>
+                                <h4 class="font-bold mb-2">125,000 Years Ago</h4>
+                                <p class="text-gray-600">Dire Wolves first appear in North America</p>
                             </div>
                             <div class="timeline-item">
-                                <h4 class="font-bold mb-2">1.2万年前</h4>
-                                <p class="text-gray-600">最后一次冰期结束，气候开始变暖</p>
+                                <h4 class="font-bold mb-2">12,000 Years Ago</h4>
+                                <p class="text-gray-600">End of the last Ice Age, climate begins to warm</p>
                             </div>
                             <div class="timeline-item">
-                                <h4 class="font-bold mb-2">1万年前</h4>
-                                <p class="text-gray-600">恐狼最终灭绝</p>
+                                <h4 class="font-bold mb-2">10,000 Years Ago</h4>
+                                <p class="text-gray-600">Final extinction of the Dire Wolf</p>
                             </div>
                         </div>
                     </div>
@@ -108,96 +108,96 @@
             </div>
         </section>
 
-        <!-- 现代灭绝危机 -->
+        <!-- Modern Extinction Crisis -->
         <section class="mb-16">
-            <h2 class="text-3xl font-bold mb-8">现代灭绝危机</h2>
+            <h2 class="text-3xl font-bold mb-8">Modern Extinction Crisis</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="bg-white rounded-lg shadow-lg p-6">
-                    <h3 class="text-xl font-bold mb-4">气候变化影响</h3>
-                    <p class="text-gray-600 mb-4">全球变暖导致栖息地减少，物种分布范围改变，与恐狼灭绝时期的气候变化有相似之处。</p>
-                    <a href="#" class="text-blue-600 hover:text-blue-800">了解更多 →</a>
+                    <h3 class="text-xl font-bold mb-4">Climate Change Impact</h3>
+                    <p class="text-gray-600 mb-4">Global warming leads to habitat reduction and species distribution changes, sharing similarities with the climate shifts during the Dire Wolf extinction period.</p>
+                    <a href="#" class="text-blue-600 hover:text-blue-800">Learn More →</a>
                 </div>
                 <div class="bg-white rounded-lg shadow-lg p-6">
-                    <h3 class="text-xl font-bold mb-4">栖息地破坏</h3>
-                    <p class="text-gray-600 mb-4">人类活动导致的栖息地破坏，使许多物种面临生存威胁，这与恐狼时期的环境变化有相似之处。</p>
-                    <a href="#" class="text-blue-600 hover:text-blue-800">了解更多 →</a>
+                    <h3 class="text-xl font-bold mb-4">Habitat Destruction</h3>
+                    <p class="text-gray-600 mb-4">Human activities causing habitat destruction threaten many species' survival, similar to environmental changes during the Dire Wolf era.</p>
+                    <a href="#" class="text-blue-600 hover:text-blue-800">Learn More →</a>
                 </div>
                 <div class="bg-white rounded-lg shadow-lg p-6">
-                    <h3 class="text-xl font-bold mb-4">物种入侵</h3>
-                    <p class="text-gray-600 mb-4">外来物种入侵导致生态平衡被破坏，这与恐狼时期新物种的竞争有相似之处。</p>
-                    <a href="#" class="text-blue-600 hover:text-blue-800">了解更多 →</a>
+                    <h3 class="text-xl font-bold mb-4">Invasive Species</h3>
+                    <p class="text-gray-600 mb-4">Invasive species disrupt ecological balance, comparable to the competition from new species during the Dire Wolf period.</p>
+                    <a href="#" class="text-blue-600 hover:text-blue-800">Learn More →</a>
                 </div>
             </div>
         </section>
 
-        <!-- 现代狼保护 -->
+        <!-- Modern Wolf Conservation -->
         <section class="mb-16">
-            <h2 class="text-3xl font-bold mb-8">现代狼保护</h2>
+            <h2 class="text-3xl font-bold mb-8">Modern Wolf Conservation</h2>
             <div class="bg-white rounded-lg shadow-lg p-8">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div>
-                        <h3 class="text-xl font-bold mb-4">保护现状</h3>
+                        <h3 class="text-xl font-bold mb-4">Current Conservation Status</h3>
                         <ul class="list-disc list-inside text-gray-600 space-y-2">
-                            <li>全球狼类种群数量持续下降</li>
-                            <li>栖息地碎片化严重</li>
-                            <li>人狼冲突加剧</li>
-                            <li>保护措施逐步加强</li>
+                            <li>Global wolf population continues to decline</li>
+                            <li>Severe habitat fragmentation</li>
+                            <li>Increasing human-wolf conflicts</li>
+                            <li>Strengthening conservation measures</li>
                         </ul>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold mb-4">保护成功案例</h3>
+                        <h3 class="text-xl font-bold mb-4">Conservation Success Stories</h3>
                         <ul class="list-disc list-inside text-gray-600 space-y-2">
-                            <li>黄石国家公园狼群重建</li>
-                            <li>欧洲狼类种群恢复</li>
-                            <li>中国狼类保护区的建立</li>
-                            <li>社区参与保护项目</li>
+                            <li>Yellowstone National Park wolf reintroduction</li>
+                            <li>European wolf population recovery</li>
+                            <li>Establishment of wolf reserves in China</li>
+                            <li>Community-based conservation projects</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- 教育资源 -->
+        <!-- Educational Resources -->
         <section class="mb-16">
-            <h2 class="text-3xl font-bold mb-8">教育资源</h2>
+            <h2 class="text-3xl font-bold mb-8">Educational Resources</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="bg-white rounded-lg shadow-lg p-6">
-                    <h3 class="text-xl font-bold mb-4">小学课程</h3>
-                    <p class="text-gray-600 mb-4">适合小学生的恐狼知识普及和动物保护意识培养课程。</p>
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">下载资源</button>
+                    <h3 class="text-xl font-bold mb-4">Elementary School Curriculum</h3>
+                    <p class="text-gray-600 mb-4">Dire Wolf knowledge and animal conservation awareness curriculum suitable for elementary school students.</p>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Download Resources</button>
                 </div>
                 <div class="bg-white rounded-lg shadow-lg p-6">
-                    <h3 class="text-xl font-bold mb-4">中学课程</h3>
-                    <p class="text-gray-600 mb-4">适合中学生的进化论和动物保护深入课程。</p>
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">下载资源</button>
+                    <h3 class="text-xl font-bold mb-4">Middle School Curriculum</h3>
+                    <p class="text-gray-600 mb-4">In-depth evolution theory and animal conservation curriculum suitable for middle school students.</p>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Download Resources</button>
                 </div>
                 <div class="bg-white rounded-lg shadow-lg p-6">
-                    <h3 class="text-xl font-bold mb-4">教师资源包</h3>
-                    <p class="text-gray-600 mb-4">包含教案、课件和活动指南的完整教学资源包。</p>
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">下载资源</button>
+                    <h3 class="text-xl font-bold mb-4">Teacher Resource Pack</h3>
+                    <p class="text-gray-600 mb-4">Complete teaching resource package including lesson plans, presentations, and activity guides.</p>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Download Resources</button>
                 </div>
             </div>
         </section>
 
-        <!-- 互动体验 -->
+        <!-- Interactive Experience -->
         <section class="mb-16">
-            <h2 class="text-3xl font-bold mb-8">互动体验</h2>
+            <h2 class="text-3xl font-bold mb-8">Interactive Experience</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="bg-white rounded-lg shadow-lg p-8">
-                    <h3 class="text-xl font-bold mb-4">生态系统模拟器</h3>
-                    <p class="text-gray-600 mb-4">通过互动模拟，了解顶级掠食者消失对生态系统的影响。</p>
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">开始模拟</button>
+                    <h3 class="text-xl font-bold mb-4">Ecosystem Simulator</h3>
+                    <p class="text-gray-600 mb-4">Understand the impact of apex predator disappearance on ecosystems through interactive simulation.</p>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Start Simulation</button>
                 </div>
                 <div class="bg-white rounded-lg shadow-lg p-8">
-                    <h3 class="text-xl font-bold mb-4">保护承诺墙</h3>
-                    <p class="text-gray-600 mb-4">分享你对动物保护的承诺，激励更多人参与保护行动。</p>
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">发表承诺</button>
+                    <h3 class="text-xl font-bold mb-4">Conservation Pledge Wall</h3>
+                    <p class="text-gray-600 mb-4">Share your commitment to animal conservation and inspire others to join conservation efforts.</p>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Make a Pledge</button>
                 </div>
             </div>
         </section>
     </main>
 
-    <!-- 页脚 -->
+    <!-- Footer -->
     <footer class="bg-gray-900 text-white py-12">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
