--- a/games.html
+++ b/games.html
@@ -1,52 +1,192 @@
-<!-- Navigation Bar -->
-<nav class="bg-gray-900 text-white p-4">
-    <div class="container mx-auto flex justify-between items-center">
-        <div class="text-2xl font-bold">Dire Wolf Education</div>
-        <div class="hidden md:flex space-x-6">
-            <a href="index.html" class="hover:text-gray-300">Home</a>
-            <a href="science.html" class="hover:text-gray-300">Science</a>
-            <a href="model.html" class="hover:text-gray-300">3D Models</a>
-            <a href="fossil.html" class="hover:text-gray-300">Fossils</a>
-            <a href="games.html" class="text-blue-400 hover:text-blue-300">Games</a>
-            <a href="conservation.html" class="hover:text-gray-300">Conservation</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Games - Dire Wolf Education</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Noto Sans SC', sans-serif;
+        }
+        .game-card {
+            transition: transform 0.3s ease;
+        }
+        .game-card:hover {
+            transform: translateY(-5px);
+        }
+    </style>
+</head>
+<body class="bg-gray-100">
+    <!-- Navigation Bar -->
+    <nav class="bg-gray-900 text-white p-4">
+        <div class="container mx-auto flex justify-between items-center">
+            <div class="text-2xl font-bold">Dire Wolf Education</div>
+            <div class="hidden md:flex space-x-6">
+                <a href="index.html" class="hover:text-gray-300">Home</a>
+                <a href="science.html" class="hover:text-gray-300">Science</a>
+                <a href="model.html" class="hover:text-gray-300">3D Models</a>
+                <a href="fossil.html" class="hover:text-gray-300">Fossils</a>
+                <a href="games.html" class="text-blue-400 hover:text-blue-300">Games</a>
+                <a href="conservation.html" class="hover:text-gray-300">Conservation</a>
+            </div>
+            <div class="md:hidden">
+                <button class="text-white">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </button>
+            </div>
         </div>
-        <div class="md:hidden">
-            <button class="text-white">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                </svg>
-            </button>
-        </div>
-    </div>
-</nav>
+    </nav>
 
-<!-- Footer -->
-<footer class="bg-gray-900 text-white py-12">
-    <div class="container mx-auto px-4">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div>
-                <h3 class="text-xl font-bold mb-4">About Us</h3>
-                <p class="text-gray-400">Dedicated to spreading knowledge about Dire Wolves and promoting paleontological education</p>
+    <!-- Page Title -->
+    <header class="bg-gray-800 text-white py-16">
+        <div class="container mx-auto px-4">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4">Interactive Games</h1>
+            <p class="text-xl text-gray-300">Learn about Dire Wolves through engaging educational games</p>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <main class="container mx-auto px-4 py-12">
+        <!-- Educational Games Section -->
+        <section class="mb-16">
+            <h2 class="text-3xl font-bold mb-8">Educational Games</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="game-card bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="https://via.placeholder.com/400x300" alt="Dire Wolf Puzzle Game" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold mb-2">Dire Wolf Puzzle</h3>
+                        <p class="text-gray-600 mb-4">Assemble a complete Dire Wolf skeleton by arranging fossil pieces in the correct positions.</p>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Play Now</button>
+                    </div>
+                </div>
+                <div class="game-card bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="https://via.placeholder.com/400x300" alt="Prehistoric Hunter Game" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold mb-2">Prehistoric Hunter</h3>
+                        <p class="text-gray-600 mb-4">Experience life as a Dire Wolf pack leader hunting for prey in the Pleistocene landscape.</p>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Play Now</button>
+                    </div>
+                </div>
+                <div class="game-card bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="https://via.placeholder.com/400x300" alt="Evolution Timeline Game" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold mb-2">Evolution Timeline</h3>
+                        <p class="text-gray-600 mb-4">Arrange evolutionary events in chronological order to learn about canid evolution.</p>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Play Now</button>
+                    </div>
+                </div>
             </div>
-            <div>
-                <h3 class="text-xl font-bold mb-4">Quick Links</h3>
-                <ul class="space-y-2">
-                    <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
-                    <li><a href="science.html" class="text-gray-400 hover:text-white">Science</a></li>
-                    <li><a href="model.html" class="text-gray-400 hover:text-white">3D Models</a></li>
-                    <li><a href="fossil.html" class="text-gray-400 hover:text-white">Fossils</a></li>
-                    <li><a href="games.html" class="text-blue-400 hover:text-blue-300">Games</a></li>
-                    <li><a href="conservation.html" class="text-gray-400 hover:text-white">Conservation</a></li>
-                </ul>
+        </section>
+
+        <!-- Interactive Quizzes -->
+        <section class="mb-16">
+            <h2 class="text-3xl font-bold mb-8">Interactive Quizzes</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white rounded-lg shadow-lg p-8">
+                    <h3 class="text-xl font-bold mb-4">Dire Wolf Knowledge Test</h3>
+                    <p class="text-gray-600 mb-4">Test your knowledge about Dire Wolf biology, habitat, and behavior with this comprehensive quiz.</p>
+                    <div class="flex justify-between items-center">
+                        <span class="text-gray-500">10 questions</span>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Start Quiz</button>
+                    </div>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg p-8">
+                    <h3 class="text-xl font-bold mb-4">Extinction Factors Challenge</h3>
+                    <p class="text-gray-600 mb-4">Analyze different factors that contributed to the Dire Wolf's extinction in this interactive assessment.</p>
+                    <div class="flex justify-between items-center">
+                        <span class="text-gray-500">8 questions</span>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Start Quiz</button>
+                    </div>
+                </div>
             </div>
-            <div>
-                <h3 class="text-xl font-bold mb-4">Contact Us</h3>
-                <p class="text-gray-400">Email: contact@direwolf.edu</p>
-                <p class="text-gray-400">Phone: +86 123 4567 8900</p>
+        </section>
+
+        <!-- Augmented Reality Experience -->
+        <section class="mb-16">
+            <h2 class="text-3xl font-bold mb-8">Augmented Reality Experience</h2>
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <div>
+                        <h3 class="text-xl font-bold mb-4">AR Dire Wolf</h3>
+                        <p class="text-gray-600 mb-4">Bring a Dire Wolf into your own environment with our augmented reality application. Observe its size, movements, and behaviors up close.</p>
+                        <ul class="list-disc list-inside text-gray-600 mb-6">
+                            <li>Realistic 3D model based on fossil evidence</li>
+                            <li>Animation showcasing movement patterns</li>
+                            <li>Size comparison with modern objects</li>
+                            <li>Educational audio narration</li>
+                        </ul>
+                        <div class="flex space-x-4">
+                            <button class="bg-gray-800 text-white px-4 py-2 rounded-lg hover:bg-gray-700 flex items-center">
+                                <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M10 12a2 2 0 100-4 2 2 0 000 4z"></path>
+                                    <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd"></path>
+                                </svg>
+                                Preview
+                            </button>
+                            <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Download App</button>
+                        </div>
+                    </div>
+                    <div class="aspect-w-16 aspect-h-9">
+                        <!-- AR App Demo Video will be placed here -->
+                        <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                            <p class="text-gray-500">AR Demo Video</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Educational Board Games -->
+        <section class="mb-16">
+            <h2 class="text-3xl font-bold mb-8">Educational Board Games</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white rounded-lg shadow-lg p-8">
+                    <h3 class="text-xl font-bold mb-4">Pleistocene Survivors</h3>
+                    <p class="text-gray-600 mb-4">A strategic board game where players navigate different species through changing climates and environments of the Pleistocene era.</p>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Learn More</button>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg p-8">
+                    <h3 class="text-xl font-bold mb-4">Predator & Prey</h3>
+                    <p class="text-gray-600 mb-4">A cooperative board game exploring the ecological relationships between predators like the Dire Wolf and their prey.</p>
+                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Learn More</button>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-12">
+        <div class="container mx-auto px-4">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div>
+                    <h3 class="text-xl font-bold mb-4">About Us</h3>
+                    <p class="text-gray-400">Dedicated to spreading knowledge about Dire Wolves and promoting paleontological education</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
+                        <li><a href="science.html" class="text-gray-400 hover:text-white">Science</a></li>
+                        <li><a href="model.html" class="text-gray-400 hover:text-white">3D Models</a></li>
+                        <li><a href="fossil.html" class="text-gray-400 hover:text-white">Fossils</a></li>
+                        <li><a href="games.html" class="text-blue-400 hover:text-blue-300">Games</a></li>
+                        <li><a href="conservation.html" class="text-gray-400 hover:text-white">Conservation</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Contact Us</h3>
+                    <p class="text-gray-400">Email: contact@direwolf.edu</p>
+                    <p class="text-gray-400">Phone: +86 123 4567 8900</p>
+                </div>
+            </div>
+            <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
+                <p>© 2024 Dire Wolf Education. All rights reserved.</p>
             </div>
         </div>
-        <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-            <p>© 2024 Dire Wolf Education. All rights reserved.</p>
-        </div>
-    </div>
-</footer> 
+    </footer>
+</body>
+</html> 
