--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dire Wolf Education - Explore the World of Prehistoric Predators</title>
+    <title>Dire Wolf Education - Explore the Prehistoric Apex Predator</title>
+    <meta name="description" content="Learn about Dire Wolves, the prehistoric apex predators that roamed North America. Discover their biology, habitat, fossils and extinction through interactive educational resources.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -132,8 +133,8 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-4">Contact Us</h3>
-                    <p class="text-gray-400">Email: contact@direwolf.edu</p>
-                    <p class="text-gray-400">Phone: +86 123 4567 8900</p>
+                    <p class="text-gray-400">Email: xinqianlin51@gmail.com</p>
+                    <p class="text-gray-400">Phone: +86 18150636869</p>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
