--- a/model.html
+++ b/model.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Model Display - Dire Wolf Education</title>
+    <title>Dire Wolf 3D Models - Interactive Anatomical Study</title>
+    <meta name="description" content="Explore interactive 3D models of Dire Wolves with detailed anatomical annotations. Compare with modern wolves and view dynamic simulations of this prehistoric predator.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -183,8 +184,8 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-4">Contact Us</h3>
-                    <p class="text-gray-400">Email: contact@direwolf.edu</p>
-                    <p class="text-gray-400">Phone: +86 123 4567 8900</p>
+                    <p class="text-gray-400">Email: xinqianlin51@gmail.com</p>
+                    <p class="text-gray-400">Phone: +86 18150636869</p>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
