--- a/conservation.html
+++ b/conservation.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animal Conservation & Evolution Education - Dire Wolf Education</title>
+    <title>Dire Wolf Conservation - Extinction Lessons for Modern Wildlife</title>
+    <meta name="description" content="Learn conservation lessons from the Dire Wolf extinction. Explore how prehistoric predator's fate relates to modern wolf conservation and climate change impacts.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -218,8 +219,8 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-4">Contact Us</h3>
-                    <p class="text-gray-400">Email: contact@direwolf.edu</p>
-                    <p class="text-gray-400">Phone: +86 123 4567 8900</p>
+                    <p class="text-gray-400">Email: xinqianlin51@gmail.com</p>
+                    <p class="text-gray-400">Phone: +86 18150636869</p>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
