增加谷歌GA代码

--- a/fossil.html
+++ b/fossil.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M322VJCV0H"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-M322VJCV0H');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dire Wolf Fossils - Global Discovery Sites & Exhibits</title>
@@ -203,7 +212,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                <p>© 2024 Dire Wolf Education. All rights reserved.</p>
+                <p>© 2025 Dire Wolf Education. All rights reserved.</p>
             </div>
         </div>
     </footer>
