--- a/model.html
+++ b/model.html
@@ -160,7 +160,7 @@
                 <div class="bg-white rounded-lg shadow-lg p-6">
                     <h3 class="text-xl font-bold mb-4">Dire Wolf</h3>
                     <p class="text-gray-600 mb-4">Showing the beautiful texture of the Dire Wolf</p>
-                    <button id="loadStandardModel" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Switch to Skeletal View</button>
+                    <button id="loadStandardModel" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Load Standard Model</button>
                 </div><!--
                 <div class="flex flex-wrap gap-2 mb-4">
                     <p class="text-gray-600 mb-4">Showing the beautiful texture of the Dire Wolf</p>
