--- a/model.html
+++ b/model.html
@@ -156,12 +156,12 @@
                 <!--<h3 class="text-lg font-bold mb-2">Model Selection</h3>
                 <p class="text-gray-600 mb-4 text-sm">Choose a built-in model or upload your own 3D model file.</p>-->
                 
-                <!-- 添加预设模型选择按钮 -->
+                <!-- 添加预设模型选择按钮 
                 <div class="bg-white rounded-lg shadow-lg p-6">
                     <h3 class="text-xl font-bold mb-4">Dire Wolf</h3>
                     <p class="text-gray-600 mb-4">Showing the beautiful texture of the Dire Wolf</p>
                     <button id="loadStandardModel" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Load Standard Model</button>
-                </div><!--
+                </div>--><!--
                 <div class="flex flex-wrap gap-2 mb-4">
                     <p class="text-gray-600 mb-4">Showing the beautiful texture of the Dire Wolf</p>
                     <button id="loadStandardModel" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Load Standard Model</button>
@@ -1406,7 +1406,7 @@
                 <div class="bg-white rounded-lg shadow-lg p-6">
                     <h3 class="text-xl font-bold mb-4">External View</h3>
                     <p class="text-gray-600 mb-4">Appreciate the external features, including fur patterns and body proportions</p>
-                    <button class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Switch to External View</button>
+                    <button id="loadStandardModel" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Switch to External View</button>
                 </div>
             </div>
         </section>
